--- a/pages/registrations/under-review.html
+++ b/pages/registrations/under-review.html
@@ -12,7 +12,10 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <script defer src="/js/translate.js"></script>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -35,14 +38,7 @@
               <a href="tel: +998(90)9999999">+998 (90) 999-99-99</a>
             </span>
           </div>
-          <a
-            href="#"
-            class="header-elem__btn"
-            id="translateButton"
-            data-en="Rus"
-            data-ru="Eng"
-            >Rus</a
-          >
+          <a href="#" class="header-elem__btn">Rus</a>
         </section>
       </div>
     </header>
@@ -51,44 +47,27 @@
         <div class="steps-indic">
           <div class="step inactive">
             <h2>1</h2>
-            <span data-en="Create account" data-ru="Регистрация"
-              >Create account</span
-            >
+            <span>Create account</span>
           </div>
           <div class="line"></div>
           <div class="step inactive">
             <h2>2</h2>
-            <span data-en="Business information" data-ru="Деловая информация"
-              >Business information</span
-            >
+            <span>Business information</span>
           </div>
           <div class="line"></div>
           <div class="steps">
             <h2>3</h2>
-            <span data-en="Application review" data-ru="На рассмотрении"
-              >Application review</span
-            >
+            <span>Application review</span>
           </div>
         </div>
       </section>
       <section class="under-review">
-        <h1 data-en="Application review!" data-ru="Рассматривается!">
-          Under Review!
-        </h1>
-        <p
-          data-en="It might take 2-3 working days. You will recieve an email with a
-        response."
-          data-ru="Это может занять 2-3 рабочих дней. Вы получите электронное письмо с
-          ответом."
-        >
+        <h1>Under Review!</h1>
+        <p>
           It might take 2-3 working days. You will recieve an email with a
           response.
         </p>
-        <span
-          data-en="Thank you for your patience!"
-          data-ru="Спасибо за ваше терпение!"
-          >Thank you for your patience!</span
-        >
+        <span>Thank you for your patience!</span>
       </section>
     </main>
     <footer>
@@ -102,18 +81,13 @@
                 alt="logo"
             /></a>
             <span>
-              <h3 data-en="Contact" data-ru="Контакт">Contact</h3>
+              <h3>Contact</h3>
               <a href="#">someemailhere@mail.com</a>
               <a href="tel: +998(90)9999999">+998 (90) 999-99-99</a>
               <a href="tel: +998(90)9999999">+998 (90) 999-99-99</a>
             </span>
           </div>
-          <h5
-            data-en="©2023 Best Offer Deal all rights reserved"
-            data-ru="©2023 Best Offer Deal все права защищены"
-          >
-            ©2023 <big>Best Offer Deal</big> all rights reserved
-          </h5>
+          <h5>©2023 <big>Best Offer Deal</big> all rights reserved</h5>
         </div>
       </div>
     </footer>
