--- a/pages/seller/seller-edit.html
+++ b/pages/seller/seller-edit.html
@@ -9,10 +9,14 @@
     <link href="https://fonts.cdnfonts.com/css/cunia" rel="stylesheet" />
     <link rel="stylesheet" href="/css/style.css" />
     <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <script defer src="/js/translate.js"></script>
+  
   </head>
   <body>
     <header>
@@ -36,20 +40,10 @@
               <a href="tel: +998(90)9999999">+998 (90) 999-99-99</a>
             </span>
           </div>
-          <button
-            href="#"
-            class="header-elem__btn"
-            id="translateButton"
-            data-en="Rus"
-            data-ru="Eng"
-          >
-            Rus
-          </button>
+          <button href="#" class="header-elem__btn">Rus</button>
           <a
             href="pages/registrations/create-account.html"
             class="header-elem__btn"
-            data-en="Profile"
-            data-ru="Кабинет"
           >
             Profile</a
           >
@@ -60,10 +54,10 @@
     <main class="seller-profile">
       <a href="#" class="add-items">
         <img src="/images/icons/plus.svg" alt="add" />
-        <p data-en="Add a new Item" data-ru="Добавить товар">Add a new Item</p>
+        <p>Add a new Item</p>
       </a>
       <section class="active-items">
-        <h3 data-en="Active Items" data-ru="Активные товары">Active Items</h3>
+        <h3>Active Items</h3>
         <div id="items">
           <div class="items-card">
             <div class="items-info">
@@ -81,10 +75,8 @@
               </div>
             </div>
             <div class="items-btn">
-              <button id="edit" data-en="Edit" data-ru="Изменение">
-                Edit <i class="bx bxs-pencil"></i>
-              </button>
-              <button id="delete" data-en="delete" data-ru="Удалить">
+              <button id="edit">Edit <i class="bx bxs-pencil"></i></button>
+              <button id="delete">
                 Delete <i class="bx bxs-trash-alt"></i>
               </button>
             </div>
@@ -105,10 +97,8 @@
               </div>
             </div>
             <div class="items-btn">
-              <button id="edit" data-en="Edit" data-ru="Изменение">
-                Edit <i class="bx bxs-pencil"></i>
-              </button>
-              <button id="delete" data-en="delete" data-ru="Удалить">
+              <button id="edit">Edit <i class="bx bxs-pencil"></i></button>
+              <button id="delete">
                 Delete <i class="bx bxs-trash-alt"></i>
               </button>
             </div>
@@ -127,18 +117,13 @@
                 alt="logo"
             /></a>
             <span>
-              <h3 data-en="Contact" data-ru="Контакт">Contact</h3>
+              <h3>Contact</h3>
               <a href="#">someemailhere@mail.com</a>
               <a href="tel: +998(90)9999999">+998 (90) 999-99-99</a>
               <a href="tel: +998(90)9999999">+998 (90) 999-99-99</a>
             </span>
           </div>
-          <h5
-            data-en="©2023 Best Offer Deal all rights reserved"
-            data-ru="©2023 Best Offer Deal все права защищены"
-          >
-            ©2023 <big>Best Offer Deal</big> all rights reserved
-          </h5>
+          <h5>©2023 <big>Best Offer Deal</big> all rights reserved</h5>
         </div>
       </div>
     </footer>
