--- a/pages/404-error.html
+++ b/pages/404-error.html
@@ -12,7 +12,11 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <script defer src="/js/translate.js"></script>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -42,38 +46,15 @@
               <a href="tel: +998(90)9999999">+998 (90) 999-99-99</a>
             </span>
           </div>
-          <button
-            href="#"
-            class="header-elem__btn"
-            id="translateButton"
-            data-en="Rus"
-            data-ru="Eng"
-          >
-            Rus
-          </button>
+          <button href="#" class="header-elem__btn">Rus</button>
         </section>
       </div>
     </header>
     <main>
       <div class="err-page">
-        <h1
-          data-en="Oops something went wrong!"
-          data-ru="УУПС ЧТО-ТО ПОШЛО НЕ ТАК!"
-        >
-          Oops something went wrong!
-        </h1>
-        <span
-          data-en="This page recently deleted"
-          data-ru="Это страница недавно удалена"
-          >This page recently deleted
-        </span>
-        <a
-          class="go-home"
-          data-en="GO HOME!"
-          data-ru="ГЛАВНАЯ СТРАНИЦА"
-          href="../index.html"
-          >GO HOME!</a
-        >
+        <h1>Oops something went wrong!</h1>
+        <span>This page recently deleted </span>
+        <a class="go-home" href="../index.html">GO HOME!</a>
       </div>
     </main>
 
@@ -88,18 +69,13 @@
                 alt="logo"
             /></a>
             <span>
-              <h3 data-en="Contact" data-ru="Контакт">Contact</h3>
+              <h3>Contact</h3>
               <a href="#">someemailhere@mail.com</a>
               <a href="tel: +998(90)9999999">+998 (90) 999-99-99</a>
               <a href="tel: +998(90)9999999">+998 (90) 999-99-99</a>
             </span>
           </div>
-          <h5
-            data-en="©2023 Best Offer Deal all rights reserved"
-            data-ru="©2023 Best Offer Deal все права защищены"
-          >
-            ©2023 <big>Best Offer Deal</big> all rights reserved
-          </h5>
+          <h5>©2023 <big>Best Offer Deal</big> all rights reserved</h5>
         </div>
       </div>
     </footer>
