added edit pages

--- a/index.html
+++ b/index.html
@@ -38,16 +38,17 @@
             </a>
             <span class="phone-box__numbers">
               <a href="tel:+998909999999">+998 (90) 999-99-99</a>
-              <a href="tel:+998909999999">+998 (90) 999-99-99</a>
             </span>
           </div>
-          <a
-            href="pages/registrations/create-account.html"
-            class="header-elem__btn"
-          >
-            <span>Sign Up</span><i class="bx bxs-plus-circle"></i>
-          </a>
-          <button class="header-elem__btn">Rus</button>
+          <div class="two-buttons">
+            <a
+              href="/pages/registrations/create-account.html"
+              class="header-elem__btn"
+            >
+              <span>Sign Up</span><i class="bx bxs-plus-circle"></i>
+            </a>
+            <button class="translate-btn">Rus</button>
+          </div>
         </section>
       </div>
     </header>
@@ -70,7 +71,7 @@
           <div class="what-v-do__elements">
             <a
               href="pages/registrations/create-account.html"
-              class="what-v-do__btn"
+              class="header-elem__btn"
             >
               Work Together <i class="bx bxs-plus-circle"></i>
             </a>
@@ -117,7 +118,7 @@
             <span>
               <a
                 href="pages/registrations/create-account.html"
-                class="what-v-do__btn"
+                class="header-elem__btn"
               >
                 Work Together <i class="bx bxs-plus-circle"></i>
               </a>
@@ -126,7 +127,7 @@
           <div class="fast-way__img">
             <img
               class="list-dude"
-              src="images/back-images/Order processed 2.png"
+              src="images/back-images/Order processed.png"
               alt="logo"
             />
           </div>
@@ -193,75 +194,20 @@
         <section class="lets-get">
           <h2>LET'S GET STARTED</h2>
           <p>Sign Up into system to start</p>
-          <div class="lets-get__buttons">
-            <button>Sign Up</button>
-            <button>Log In</button>
-            <button>Supplier</button>
-            <button>Customer</button>
-          </div>
-
-          <div class="lets-get__inputs-box">
-            <div class="email-input">
-              <label class="lets-get__labels" for="email">E-mail</label>
-              <input
-                class="lets-get__inputs"
-                type="email"
-                id="email"
-                name="email"
-                required
-                placeholder="emailexamplehere@gmail.com"
-              />
-            </div>
-
-            <div class="sell-input">
-              <label class="lets-get__labels" for="what-do-u-sell"
-                >What do you Sell?</label
-              >
-              <input
-                class="lets-get__inputs"
-                type="text"
-                id="product-name"
-                required
-                placeholder="ex. Chair, furnutures"
-              />
-            </div>
-
-            <div class="number-input">
-              <label class="lets-get__labels" for="phone-number"
-                >Phone Number</label
-              >
-              <input
-                class="lets-get__inputs"
-                type="tel"
-                class="input-field"
-                placeholder="Enter phone number"
-                pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
-                title="Phone number must be in the format XXX-XXX-XXXX"
-                required
-                id="number"
-              />
-            </div>
-
-            <div class="file-input-container">
-              <input
-                class="file-input"
-                type="file"
-                name="file"
-                id="certificate"
-                accept=".pdf, .doc, .docx"
-                required
-              />
-              <span class="lets-get__labels"
-                >Upload your certificate
-                <p data-en="(PDF, DOC, DOCX)" data-ru="(PDF, DOC, DOCX)">
-                  (PDF, DOC, DOCX)
-                </p></span
-              >
-              <label for="certificate" class="file-input-button"
-                >Choose File</label
-              >
-            </div>
-          </div>
+          <!-- <div class="choose">
+            <a
+              href="pages/registrations/create-account.html"
+              class="choose_btn"
+            >
+              <span>Sign Up</span><i class="bx bxs-plus-circle"></i>
+            </a>
+            <a
+              href="pages/registrations/create-account.html"
+              class="choose_btn"
+            >
+              <span>Sign Up</span><i class="bx bxs-plus-circle"></i>
+            </a>
+          </div> -->
         </section>
       </div>
     </main>
