--- a/pages/registrations/create-account.html
+++ b/pages/registrations/create-account.html
@@ -34,8 +34,9 @@
             <img src="/images/logo-web.svg" alt="logo" />
             <img src="/images/logo-text.svg" alt="text" />
           </a>
+          <a href="/pages/404-error.html" class="company">Company</a>
           <div class="phone-box">
-            <a href="tel: +998(90)9999999">
+            <a href="tel:+998909999999">
               <img
                 class="phone-box__icon"
                 src="/images/icons/phone.svg"
@@ -43,11 +44,18 @@
               />
             </a>
             <span class="phone-box__numbers">
-              <a href="tel: +998(90)9999999">+998 (90) 999-99-99</a>
-              <a href="tel: +998(90)9999999">+998 (90) 999-99-99</a>
+              <a href="tel:+998909999999">+998 (90) 999-99-99</a>
             </span>
           </div>
-          <button class="header-elem__btn">Rus</button>
+          <div class="two-buttons">
+            <a
+              href="/pages/registrations/create-account.html"
+              class="header-elem__btn"
+            >
+              <span>Sign Up</span><i class="bx bxs-plus-circle"></i>
+            </a>
+            <button class="translate-btn">Rus</button>
+          </div>
         </section>
       </div>
     </header>
@@ -73,13 +81,7 @@
       <section class="create-acc">
         <div class="create-acc_buttons">
           <a class="button active">Sign Up</a>
-          <a
-            data-en="Sign In"
-            data-ru="Входит"
-            class="button"
-            href="./login/logIn.html"
-            >Sign In</a
-          >
+          <a class="button" href="../login/logIn.html">Sign In</a>
         </div>
         <div class="create-acc_box">
           <h2>Create Account</h2>
