--- a/pages/seller/adding-product.html
+++ b/pages/seller/adding-product.html
@@ -42,7 +42,7 @@
               <a href="tel: +998(90)9999999">+998 (90) 999-99-99</a>
             </span>
           </div>
-          <button href="#" class="header-elem__btn">Rus</button>
+          <button href="#" class="translate-btn">Rus</button>
           <a
             href="pages/registrations/create-account.html"
             class="header-elem__btn"
