--- a/pages/edits/business-info_edit.html
+++ b/pages/edits/business-info_edit.html
@@ -62,18 +62,13 @@
       <main class="main-busin-info">
         <section class="left-side2">
           <div class="steps-indic">
-            <div class="step inactive">
-              <h2>1</h2>
-              <span>Create account</span>
-            </div>
-            <div class="line"></div>
             <div class="steps">
-              <h2>2</h2>
+              <h2>1</h2>
               <span>Business information</span>
             </div>
             <div class="line"></div>
             <div class="step inactive">
-              <h2>3</h2>
+              <h2>2</h2>
               <span>Application review</span>
             </div>
           </div>
@@ -87,7 +82,7 @@
 
             <div class="buss_two-elem">
               <div>
-                <label for="choose">Company legal form</label>
+                <label class="choose" for="choose">Company legal form</label>
                 <div class="inp">
                   <input
                     class="buss-inp"
