--- a/pages/edits/email_edit.html
+++ b/pages/edits/email_edit.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Best Offers</title>
-    <link rel="icon" href="images/logo-web.svg" type="web-logo" />
+    <link rel="icon" href="/images/logo-web.svg" type="web-logo" />
     <link rel="apple-touch-icon" href="images/logo-web.svg" />
     <link href="https://fonts.cdnfonts.com/css/cunia" rel="stylesheet" />
     <link rel="stylesheet" href="/css/style.css" />
@@ -15,6 +15,14 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
   </head>
   <body>
@@ -42,49 +50,66 @@
             <a
               href="/pages/registrations/create-account.html"
               class="header-elem__btn"
-            >
-              <span>Sign Up</span><i class="bx bxs-plus-circle"></i>
+              ><i class="bx bx-user-circle"></i><span>Profile</span>
             </a>
             <button class="translate-btn">Rus</button>
           </div>
         </section>
       </div>
     </header>
-    <main class="main-busin-info">
-      <section class="left-side2">
-        <div class="steps-indic">
-          <div class="step inactive">
-            <h2>1</h2>
-            <span>Create account</span>
+    <section class="edits-container">
+      <div class="change-email">
+        <h1 class="text-change-email">Change your E-mail</h1>
+        <div>
+          <h3 class="text-new-email">New E-mail</h3>
+          <div class="inp">
+            <input
+              required
+              class="inputs"
+              type="email"
+              name="emai"
+              id="reset-email"
+              placeholder="Please enter email, which will be used as your login"
+            />
+            <span class="error-icon hidden">
+              <i class="fa-sharp fa-solid fa-circle-exclamation"></i>
+            </span>
+            <span class="success-icon hidden">
+              <i class="fa-sharp fa-solid fa-circle-check"></i>
+            </span>
+            <div class="error"></div>
           </div>
-          <div class="line"></div>
-          <div class="step inactive">
-            <h2>2</h2>
-            <span>Business information</span>
+          <div class="f-two-elem">
+            <div class="inp">
+              <input
+                required
+                class="inputs"
+                type="text"
+                name="emai verification"
+                id="email-verification"
+                placeholder="Please enter email verification code"
+              />
+              <span class="error-icon hidden">
+                <i class="fa-sharp fa-solid fa-circle-exclamation"></i>
+              </span>
+              <span class="success-icon hidden">
+                <i class="fa-sharp fa-solid fa-circle-check"></i>
+              </span>
+              <div class="error"></div>
+            </div>
+            <button id="send-code" type="button">Send</button>
           </div>
-          <div class="line"></div>
-          <div class="steps">
-            <h2>3</h2>
-            <span>Application review</span>
-          </div>
+          <button id="btn-change-email">Change E-mail</button>
         </div>
-      </section>
-      <section class="under-review">
-        <h1>Under Review!</h1>
-        <p>
-          It might take 2-3 working days. You will recieve an email with a
-          response.
-        </p>
-        <span>Thank you for your patience!</span>
-      </section>
-    </main>
+      </div>
+    </section>
     <footer>
       <img class="footer" src="/images/back-images/union.svg" alt="logo" />
       <div class="container">
         <div class="footer-elements">
           <div>
             <a href="#"
-              ><img src="/images/back-images/White-logo.svg" alt="logo" /><img
+              ><img src="/images/back-images/white-logo.svg" alt="logo" /><img
                 src="/images/back-images/white-text-logo.svg"
                 alt="logo"
             /></a>
