--- a/pages/seller/seller-edit.html
+++ b/pages/seller/seller-edit.html
@@ -16,7 +16,6 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-  
   </head>
   <body>
     <header>
@@ -26,9 +25,9 @@
             <img src="/images/logo-web.svg" alt="logo" />
             <img src="/images/logo-text.svg" alt="text" />
           </a>
-
+          <a href="/pages/404-error.html" class="company">Company</a>
           <div class="phone-box">
-            <a href="tel: +998(90)9999999">
+            <a href="tel:+998909999999">
               <img
                 class="phone-box__icon"
                 src="/images/icons/phone.svg"
@@ -36,17 +35,17 @@
               />
             </a>
             <span class="phone-box__numbers">
-              <a href="tel: +998(90)9999999">+998 (90) 999-99-99</a>
-              <a href="tel: +998(90)9999999">+998 (90) 999-99-99</a>
+              <a href="tel:+998909999999">+998 (90) 999-99-99</a>
             </span>
           </div>
-          <button href="#" class="header-elem__btn">Rus</button>
-          <a
-            href="pages/registrations/create-account.html"
-            class="header-elem__btn"
-          >
-            Profile</a
-          >
+          <div class="two-buttons">
+            <a
+              href="/pages/registrations/create-account.html"
+              class="header-elem__btn"
+              ><i class="bx bx-user-circle"></i><span>Profile</span>
+            </a>
+            <button class="translate-btn">Rus</button>
+          </div>
         </section>
       </div>
     </header>
