--- a/pages/edits/adding-product_edit.html
+++ b/pages/edits/adding-product_edit.html
@@ -99,27 +99,27 @@
             </span>
           </div>
         </section>
-        <section class="product-category">
+        <section class="product-category inactive">
           <h3>Product category (choose one)</h3>
           <div class="categories">
-            <span id="category">Category1</span>
-            <input type="radio" name="category" id="category" />
-            <span id="category">Category1</span>
-            <input type="radio" name="category" id="category" />
-            <span id="category">Category1</span>
-            <input type="radio" name="category" id="category" />
-            <span id="category">Category1</span>
-            <input type="radio" name="category" id="category" />
-            <span id="category">Category1</span>
-            <input type="radio" name="category" id="category" />
-            <span id="category">Category1</span>
-            <input type="radio" name="category" id="category" />
-            <span id="category">Category1</span>
-            <input type="radio" name="category" id="category" />
-            <span id="category">Category1</span>
-            <input type="radio" name="category" id="category" />
-            <span id="category">Category1</span>
-            <input type="radio" name="category" id="category" />
+            <span id="category" class="inactive">Category1</span>
+            <input disabled type="radio" name="category" id="category" />
+            <span id="category" class="inactive">Category1</span>
+            <input disabled type="radio" name="category" id="category" />
+            <span id="category" class="inactive">Category1</span>
+            <input disabled type="radio" name="category" id="category" />
+            <span id="category" class="inactive">Category1</span>
+            <input disabled type="radio" name="category" id="category" />
+            <span id="category" class="inactive">Category1</span>
+            <input disabled type="radio" name="category" id="category" />
+            <span id="category" class="inactive">Category1</span>
+            <input disabled type="radio" name="category" id="category" />
+            <span id="category" class="inactive">Category1</span>
+            <input disabled type="radio" name="category" id="category" />
+            <span id="category" class="inactive">Category1</span>
+            <input disabled type="radio" name="category" id="category" />
+            <span id="category" class="inactive">Category1</span>
+            <input disabled type="radio" name="category" id="category" />
           </div>
 
           <button id="save" a>Save</button>
