--- a/pages/seller/seller-edit.html
+++ b/pages/seller/seller-edit.html
@@ -51,59 +51,72 @@
     </header>
 
     <main class="seller-profile">
-      <a href="#" class="add-items">
-        <img src="/images/icons/plus.svg" alt="add" />
-        <p>Add a new Item</p>
-      </a>
-      <section class="active-items">
-        <h3>Active Items</h3>
-        <div id="items">
-          <div class="items-card">
-            <div class="items-info">
-              <img src="/images/products-images/paper.png" alt="product" />
-              <div class="items-details">
-                <h3 id="item-name">Notebook 48pages</h3>
-                <span class="item-details_box">
-                  <p id="amount">Amount <span id="amt">1000pcs</span></p>
-                  <p id="pages">Pages <span id="pgs">48</span></p>
-                  <p id="color">Color <span id="clr">red</span></p>
-                  <p id="price">Amount <span id="prc">$ 0.56 / pcs</span></p>
-                  <p id="shipping">Shipping <span id="shp">7 days</span></p>
-                  <p id="other">Other <span id="othr">Square linead</span></p>
-                </span>
-              </div>
-            </div>
-            <div class="items-btn">
-              <button id="edit">Edit <i class="bx bxs-pencil"></i></button>
-              <button id="delete">
-                Delete <i class="bx bxs-trash-alt"></i>
-              </button>
-            </div>
-          </div>
-          <div class="items-card">
-            <div class="items-info">
-              <img src="/images/products-images/paper.png" alt="product" />
-              <div class="items-details">
-                <h3 id="item-name">Notebook 48pages</h3>
-                <span class="item-details_box">
-                  <p id="amount">Amount<span id="amt">1000pcs</span></p>
-                  <p id="pages">Pages<span id="pgs">48</span></p>
-                  <p id="color">Color<span id="clr">red</span></p>
-                  <p id="price">Amount<span id="prc">$ 0.56 / pcs</span></p>
-                  <p id="shipping">Shipping<span id="shp">7 days</span></p>
-                  <p id="other">Other<span id="othr">Square linead</span></p>
-                </span>
-              </div>
-            </div>
-            <div class="items-btn">
-              <button id="edit">Edit <i class="bx bxs-pencil"></i></button>
-              <button id="delete">
-                Delete <i class="bx bxs-trash-alt"></i>
-              </button>
-            </div>
-          </div>
+      <div>
+        <div>
+          <a href="/pages/seller/adding-product.html" class="add-items">
+            <img src="/images/icons/plus.svg" alt="add" />
+            <p>Add a new Item</p>
+          </a>
         </div>
-      </section>
+
+        <section class="active-items">
+          <h3>Active Items</h3>
+          <div id="items">
+            <div class="items-card">
+              <div class="items-info">
+                <img
+                  class="product-image"
+                  src="/images/products-images/paper.png"
+                  alt="product"
+                />
+                <div class="items-details">
+                  <h3 id="item-name">Notebook 48pages</h3>
+                  <span class="item-details_box">
+                    <p id="amount">Amount <span id="amt">1000pcs</span></p>
+                    <p id="pages">Pages <span id="pgs">48</span></p>
+                    <p id="color">Color <span id="clr">red</span></p>
+                    <p id="price">Amount <span id="prc">$ 0.56 / pcs</span></p>
+                    <p id="shipping">Shipping <span id="shp">7 days</span></p>
+                    <p id="other">Other <span id="othr">Square linead</span></p>
+                  </span>
+                </div>
+              </div>
+              <div class="items-btn">
+                <button id="edit">Edit <i class="bx bxs-pencil"></i></button>
+                <button id="delete">
+                  Delete <i class="bx bxs-trash-alt"></i>
+                </button>
+              </div>
+            </div>
+            <div class="items-card">
+              <div class="items-info">
+                <img
+                  class="product-image"
+                  src="/images/products-images/paper.png"
+                  alt="product"
+                />
+                <div class="items-details">
+                  <h3 id="item-name">Notebook 48pages</h3>
+                  <span class="item-details_box">
+                    <p id="amount">Amount<span id="amt">1000pcs</span></p>
+                    <p id="pages">Pages<span id="pgs">48</span></p>
+                    <p id="color">Color<span id="clr">red</span></p>
+                    <p id="price">Amount<span id="prc">$ 0.56 / pcs</span></p>
+                    <p id="shipping">Shipping<span id="shp">7 days</span></p>
+                    <p id="other">Other<span id="othr">Square linead</span></p>
+                  </span>
+                </div>
+              </div>
+              <div class="items-btn">
+                <button id="edit">Edit <i class="bx bxs-pencil"></i></button>
+                <button id="delete">
+                  Delete <i class="bx bxs-trash-alt"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
     </main>
     <footer>
       <img class="footer" src="/images/back-images/union.svg" alt="logo" />
